WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234528
Harden PCM and ITP databases against crashes
https://bugs.webkit.org/show_bug.cgi?id=234528
Summary
Harden PCM and ITP databases against crashes
Kate Cheney
Reported
2021-12-20 14:41:11 PST
Harden PCM and ITP databases against crashes
Attachments
Patch
(5.69 KB, patch)
2021-12-20 14:51 PST
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Patch for landing
(7.92 KB, patch)
2021-12-21 09:28 PST
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.82 KB, patch)
2021-12-21 09:32 PST
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-12-20 14:41:27 PST
<
rdar://problem/86741319
>
Kate Cheney
Comment 2
2021-12-20 14:51:11 PST
Created
attachment 447646
[details]
Patch
Brent Fulgham
Comment 3
2021-12-20 15:18:38 PST
Comment on
attachment 447646
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=447646&action=review
r=me
> Source/WebKit/NetworkProcess/DatabaseUtilities.cpp:279 > + WebCore::SQLiteTransaction transaction(m_database);
beginTransactionIfNecessary ASSERTs when on the main thread. Should we add that assertion, too? ASSERT(!RunLoop::isMain());
Kate Cheney
Comment 4
2021-12-21 09:25:24 PST
Comment on
attachment 447646
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=447646&action=review
Thanks!
>> Source/WebKit/NetworkProcess/DatabaseUtilities.cpp:279 >> + WebCore::SQLiteTransaction transaction(m_database); > > beginTransactionIfNecessary ASSERTs when on the main thread. Should we add that assertion, too? > > ASSERT(!RunLoop::isMain());
Yes, I can add that in.
Kate Cheney
Comment 5
2021-12-21 09:28:07 PST
Created
attachment 447724
[details]
Patch for landing
Kate Cheney
Comment 6
2021-12-21 09:32:11 PST
Created
attachment 447725
[details]
Patch for landing
EWS
Comment 7
2021-12-21 10:32:49 PST
Committed
r287322
(
245472@main
): <
https://commits.webkit.org/245472@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 447725
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug